<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/linear_layout_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textSize="30sp"
                android:textAlignment="center"
                android:text="@string/information_menu"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:text="@string/prompt_surname"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="@string/prompt_surname"
                android:hint="@string/surname_hint"
                android:inputType="text"
                android:textSize="16sp"
                android:selectAllOnFocus="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:text="@string/prompt_name"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="@string/prompt_name"
                android:hint="@string/name_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textSize="16sp"
                android:selectAllOnFocus="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:text="@string/prompt_birth_date"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="@string/prompt_birth_date"
                android:hint="@string/birth_date_hint"
                android:imeOptions="actionDone"
                android:inputType="date"
                android:textSize="16sp"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:selectAllOnFocus="false"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:text="@string/prompt_city"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="@string/prompt_city"
                android:hint="@string/city_hint"
                android:inputType="text"
                android:textSize="16sp"
                android:selectAllOnFocus="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:text="@string/prompt_department"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:entries="@array/departments" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone_numbers_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/add_phone_number_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_phone_number"
            android:onClick="addPhoneNumberField"
            app:layout_constraintTop_toBottomOf="@id/phone_numbers_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/validate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="validateAction"
            android:text="@string/validate"
            app:layout_constraintTop_toBottomOf="@id/add_phone_number_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>