<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DisplayActivity">

        <!-- Surname Section -->
        <TextView
            android:id="@+id/surnameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/surnameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/surnameTitle"
            app:layout_constraintTop_toBottomOf="@+id/surnameTitle"
            android:layout_marginStart="8dp" />

        <!-- Name Section -->
        <TextView
            android:id="@+id/nameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/surnameTitle"
            app:layout_constraintTop_toBottomOf="@+id/surnameTextView"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/surnameTextView"
            app:layout_constraintTop_toBottomOf="@+id/nameTitle"
            android:layout_marginTop="8dp" />

        <!-- Birth Date Section -->
        <TextView
            android:id="@+id/birthDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth_date_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/nameTitle"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/birthDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/nameTextView"
            app:layout_constraintTop_toBottomOf="@+id/birthDateTitle"
            android:layout_marginTop="8dp" />

        <!-- City Section -->
        <TextView
            android:id="@+id/cityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/birthDateTitle"
            app:layout_constraintTop_toBottomOf="@+id/birthDateTextView"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/cityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/birthDateTextView"
            app:layout_constraintTop_toBottomOf="@+id/cityTitle"
            android:layout_marginTop="8dp" />

        <!-- Department Section -->
        <TextView
            android:id="@+id/departmentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/cityTitle"
            app:layout_constraintTop_toBottomOf="@+id/cityTextView"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/departmentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/cityTextView"
            app:layout_constraintTop_toBottomOf="@+id/departmentTitle"
            android:layout_marginTop="8dp" />

        <!-- Phone Numbers Section -->
        <TextView
            android:id="@+id/phoneNumbersTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_numbers_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/departmentTitle"
            app:layout_constraintTop_toBottomOf="@+id/departmentTextView"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/phoneNumbersTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/departmentTextView"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumbersTitle" />

        <!-- Close Button -->
        <Button
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_text"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumbersTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="closeActivity" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

